=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.2.x CA
 - Added: A few more auto-fill functions for the GEDFact_assistant/_CENS/ edit fields. (windmillway)
 - Merged: Merge changes r6646 - r6671 from the trunk. (yalnifj)
 - Merged: Merge changes r6543 - r6645 from the trunk. (yalnifj)
 - Added Family Nav sidebar and Clippings sidebar, fixed sidebar rtl (yalnifj)
 - Merged: Merge changes r6538 - r6542 from the trunk. (windmillway)
 - Changed: Corrected logic when adding an assisted Shared Note when "Editing" an existing Census event. (windmillway)
 - Fixed: fix conflict with temp upgrade and initial install (yalnifj)
 - Merged: Merge changes r6536 - r6537 from the trunk. (windmillway)
 - Merged: Merge changes r6529 - r6535 from the trunk. (windmillway)
 - Changed: The Process of copying the Census Event to the multiple Indi id's stipulated in the assisted Shared Note window is now automated. Requires Trunk svn 6535 (windmillway)
 - Info only: The message text for svn 6529 should read "Merge changes r6477 - r6528 from the trunk." (windmillway
 - Reverted: Removed SOUR and OBJE functions from GEDFact assistant window. 
   Copy to multi Indi/Family id's will be done in the Add Census window. (Still to come) (windmillway)
 - Merged: Merge changes r6477 - r6528 from the trunk. (windmillway) [edited]
 - Added sidebar and some sidebar modules (yalnifj)
 - Changed: Minor changes to prevent addition of none entered tags (e.g. OBJE) when entry fields are empty. (windmillway)
 - Changed: GEDFact Census assistant now copies a Census event to all affected Indi's in the shared note created. (windmillway)
 - Merged: Merge changes r6431 - r6476 from the trunk.  
   Also added SOUR and OBJE fields to GEDFact assistant window. 