@@ -112,7 +112,11 @@ switch ($type) {
 <script language="JavaScript" type="text/javascript">
 <!--
 	function pasterow(id, name, fullmn, gend, yob, age, bpl) {
-		window.opener.insertRowToTable(id, name, fullmn, '', gend, '', yob, age, 'Y', '', bpl);
+		// =========================================================================================================================
+		// Example: This is what the current insertRowToTable() function requires 
+		// window opener.insertRowToTable(id, nam,  mnam, label, gend, cond, dom, dob, age, YMD, occu, birthpl, fbirthpl, mbirthpl);
+		// =========================================================================================================================
+		window.opener.insertRowToTable(id, name, fullmn, '', gend, '', yob, '', age, 'Y', '', bpl, '', '');
 		<?php if (!$multiple) print "window.close();"; ?>
 	}
 	
