@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.2.x CA
+ - Fixed: Corrected the Find function error in GEDFact_assistant/_CENS/ (windmillway)
  - Added: A few more auto-fill functions for the GEDFact_assistant/_CENS/ edit fields. (windmillway)
  - Merged: Merge changes r6646 - r6671 from the trunk. (yalnifj)
  - Merged: Merge changes r6543 - r6645 from the trunk. (yalnifj)
